# MakingBreakInC

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
include/: convert.h
src/: convert.c  main.c
tests/: test_convert.c  test_more.c
